--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,7 @@
     "./algorithm": "./algorithm.ts"
   },
   "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.4",
     "@std/encoding": "jsr:@std/encoding@^1.0.4"
   }
 }
