--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,16 @@
 name: Publish
+
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: [Test]
+    types:
+      - completed
+    branches: [main]
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     permissions:
       contents: read
