--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,8 @@
 {
   "name": "@emrahcom/jwt",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "exports": {
-    ".": "./mod.ts",
-    "./algorithm": "./algorithm.ts"
+    ".": "./mod.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.4",
