--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,9 @@
 {
   "name": "@emrahcom/jwt",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "exports": {
-    ".": "./mod.ts"
+    ".": "./mod.ts",
+    "./algorithm": "./algorithm.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.4",
